--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '2.0.21'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
+}
+
+javafx {
+    version = "17"
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 group = 'kz'
@@ -10,13 +16,16 @@ repositories {
 }
 
 dependencies {
-    def javaFxVersion = '20'
-    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    def javaFxVersion = '17'
+
+    implementation "org.openjfx:javafx-controls:$javaFxVersion"
+    implementation "org.openjfx:javafx-fxml:$javaFxVersion"
+    implementation "org.jodconverter:jodconverter-local:4.4.6"
+    implementation "org.slf4j:slf4j-simple:2.0.16"
+
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.8.1")
 }
 
-test {
-    useJUnitPlatform()
-}
 kotlin {
     jvmToolchain(17)
 }
